[package]
name = "empy"
version = "1.0.0-alpha2"
description = "fast & safe no_std minimp3 wrapper"
authors = ["viri <hi@viri.moe>"]
edition = "2021"
license = "CC0-1.0"
homepage = "https://github.com/viriuwu/rmp3"
repository = "https://github.com/viriuwu/rmp3"
documentation = "https://docs.rs/empy"
readme = "README.md"

# for crates.io
include = [
    "ffi/minimp3/minimp3.h",
    "ffi/minimp3.c",
    "src/**/*.rs",
    "Cargo.toml",
    "LICENCE",
]

[build-dependencies]
cc = "1.0"

[dependencies]
chlorine = "1.0"

[features]
default = ["simd"]
mp1-mp2 = []
simd = []
